--- a/main.ipynb
+++ b/main.ipynb
@@ -6,7 +6,151 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello World!\")"
+    "{\n",
+    " \"cells\": [\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"# Linear Programming Solver Application\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"This notebook serves as the **main runner** for a modular **Linear Programming (LP) solver**.\\n\",\n",
+    "    \"Users can input an LP problem, solve it using PuLP, visualize the feasible region (if applicable), and export the solution.\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"## 1. Import Modules\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"import re\\n\",\n",
+    "    \"import numpy as np\\n\",\n",
+    "    \"import pandas as pd\\n\",\n",
+    "    \"import matplotlib.pyplot as plt\\n\",\n",
+    "    \"from pulp import LpMaximize, LpProblem, LpVariable, lpSum, PULP_CBC_CMD\\n\",\n",
+    "    \"from modules.parser import parse_lp_input\\n\",\n",
+    "    \"from modules.solver import solve_lp\\n\",\n",
+    "    \"from modules.export import export_solution\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"## 2. User Input & Parsing\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"# Get LP input from user\\n\",\n",
+    "    \"lp_input = input(\\\"Enter LP problem in standard form:\\\\n\\\")\\n\",\n",
+    "    \"\\n\",\n",
+    "    \"# Parse the input safely\\n\",\n",
+    "    \"try:\\n\",\n",
+    "    \"    objective, variables, constraints, bounds = parse_lp_input(lp_input)\\n\",\n",
+    "    \"    print(\\\"Objective Function:\\\", objective)\\n\",\n",
+    "    \"    print(\\\"Variables:\\\", variables)\\n\",\n",
+    "    \"    print(\\\"Constraints:\\\", constraints)\\n\",\n",
+    "    \"    print(\\\"Bounds:\\\", bounds)\\n\",\n",
+    "    \"except Exception as e:\\n\",\n",
+    "    \"    print(\\\"Error parsing LP input:\\\", str(e))\\n\",\n",
+    "    \"    objective, variables, constraints, bounds = None, None, None, None\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"## 3. Solver Execution\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"try:\\n\",\n",
+    "    \"    solution, status = solve_lp(objective, variables, constraints, bounds)\\n\",\n",
+    "    \"    print(\\\"Solver Status:\\\", status)\\n\",\n",
+    "    \"    print(\\\"Solution:\\\", solution)\\n\",\n",
+    "    \"except Exception as e:\\n\",\n",
+    "    \"    print(\\\"Error solving LP problem:\\\", str(e))\\n\",\n",
+    "    \"    solution = None\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"## 4. Visualization (for 2D problems)\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"if solution and len(variables) == 2:\\n\",\n",
+    "    \"    x_vals = np.linspace(0, 10, 400)\\n\",\n",
+    "    \"    y_vals = np.linspace(0, 10, 400)\\n\",\n",
+    "    \"    X, Y = np.meshgrid(x_vals, y_vals)\\n\",\n",
+    "    \"    Z = 3 * X + 5 * Y  # Compute based on parsed coefficients\\n\",\n",
+    "    \"    \\n\",\n",
+    "    \"    plt.figure(figsize=(10, 6))\\n\",\n",
+    "    \"    plt.contourf(X, Y, Z, levels=50, cmap='viridis')\\n\",\n",
+    "    \"    plt.colorbar(label='Objective Function Value')\\n\",\n",
+    "    \"    plt.xlabel(variables[0])\\n\",\n",
+    "    \"    plt.ylabel(variables[1])\\n\",\n",
+    "    \"    plt.title('Feasible Region and Objective Function Contours')\\n\",\n",
+    "    \"    plt.show()\\n\",\n",
+    "    \"else:\\n\",\n",
+    "    \"    print(\\\"Solution:\\\", solution)\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"markdown\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"## 5. Export Results\"\n",
+    "   ]\n",
+    "  },\n",
+    "  {\n",
+    "   \"cell_type\": \"code\",\n",
+    "   \"metadata\": {},\n",
+    "   \"source\": [\n",
+    "    \"export_format = input(\\\"Enter export format (csv, json, pdf): \\\").strip().lower()\\n\",\n",
+    "    \"export_solution(solution, file_path='solution_output', formats=[export_format])\"\n",
+    "   ]\n",
+    "  }\n",
+    " ],\n",
+    " \"metadata\": {\n",
+    "  \"kernelspec\": {\n",
+    "   \"display_name\": \"Python 3\",\n",
+    "   \"language\": \"python\",\n",
+    "   \"name\": \"python3\"\n",
+    "  },\n",
+    "  \"language_info\": {\n",
+    "   \"codemirror_mode\": {\n",
+    "    \"name\": \"ipython\",\n",
+    "    \"version\": 3\n",
+    "   },\n",
+    "   \"file_extension\": \".py\",\n",
+    "   \"mimetype\": \"text/x-python\",\n",
+    "   \"name\": \"python\",\n",
+    "   \"nbconvert_exporter\": \"python\",\n",
+    "   \"pygments_lexer\": \"ipython3\",\n",
+    "   \"version\": \"3.8.5\"\n",
+    "  }\n",
+    " },\n",
+    " \"nbformat\": 4,\n",
+    " \"nbformat_minor\": 4\n",
+    "}\n"
    ]
   }
  ],
